--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   lipsum: ^1.0.1
   splashscreen: any
   getwidget: ^2.0.5
+  flutter_platform_alert: ^0.3.0
   
 
 dev_dependencies:
