--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   splashscreen: any
   getwidget: ^2.0.5
   flutter_platform_alert: ^0.3.0
+  video_player: ^2.4.7
   
 
 dev_dependencies:
@@ -57,6 +58,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - assets/videos/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
